force-app/main/default/objects/ssot__FulfillmentOrderTax__dlm/fields/ssot__FulfillmentOrderPriceAdjustmentTaxId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfillmentOrderPriceAdjustmentTaxId__c</fullName>
    <label>Fulfillment Order Price Adjustment Tax</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfillmentOrderPriceAdjustmentTaxId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>