force-app/main/default/objects/ssot__FulfillmentOrderTax__dlm/fields/ssot__FulfillmentOrderProductTaxId__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfillmentOrderProductTaxId__c</fullName>
    <label>Fulfillment Order Product Tax</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfillmentOrderProductTaxId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>