force-app/main/default/objects/ssot__FulfillmentOrderTax__dlm/fields/ssot__FulfillmentOrderTaxType__c.field-meta.xml
<CustomField>
    <fullName>ssot__FulfillmentOrderTaxType__c</fullName>
    <label>Fulfillment Order Tax Type</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>FulfillmentOrderTaxType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>