force-app/main/default/objects/ssot__FulfillmentOrderTax__dlm/fields/ssot__TaxEffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__TaxEffectiveDate__c</fullName>
    <label>Tax Effective Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>TaxEffectiveDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>DateTime</type>
</CustomField>